Use virtual threads where sensible